    Sag. It gently wraps the Sag interface to make managing CouchDB users much
    easier. You can create and get users, and change their password.

  * An example of how to proxy the cookie based auth's AuthSession cookie from
    your PHP layer to CouchDB, making it easier to have user accounts in your
    application without rewriting user management yet again.

Version 0.5.1
-------------

Fixed Bugs

  * Previously PUT was caching CouchDB's response, which created unexpected
    results (the actual data being POST'd was expected to be cached). This is
    now fixed: that data provided to post() is combined with the server's
    response to create a cacheable object whose headers will not be entirely
    accurate. POST is still not cached because CouchDB does not respond with an
    E-tag to cache against. Thanks to Peter Kruithof for reporting and original
    patch. (closes #17)

  * setAttachment() now properly URL encodes the ?rev parameter when you
    specify the document's _rev (last function parameter). Thanks to skyshard
    for reporting the issue and the fix. (closes #19)

Version 0.5.0
-------------

Breaking Changes

  * These Sag class functions now return the class's current instance ($this):
    decode, setDatabase, setOpenTimeout, setRWTimeout, setCache,
    setStaleDefault. This allows configuration functions to be chained before
    you make a call to CouchDB. (closes #14)

  * Sag->setDatabase() will now URL encode database names that are passed to
    it. This may break your code if you were already encoding database names
    before passing them. For example,
    `$sag->setDatabase(urlencode('some/db'));` will no longer work as expected.
    Instead use `$sag->setDatabase('some/db');`.

New Features

  * Sag now supports connection pooling for sockets with HTTP's Connection:
    Keep-Alive. This means Sag no longer opens and closes a socket for each
    request made (better performance). No management is provided for the